# npsql

./: .gitignore  CMakeLists.txt  README.md  sample.data
.github/workflows/: main.yml
client/: NpSql.sln
client/NpSql/: ConnectionString.cs  NpSqlColumnDefinition.cs  NpSqlCommand.cs  NpSqlConnection.cs  NpSqlDataReader.cs  NpSqlException.cs  NqpTypes.cs
client/NpSql-Cli/: NpSql-Cli.csproj  Program.cs
client/NpSql.Tests/: ConnectionStringTests.cs  DataReaderExtensions.cs  NpSql.Tests.csproj  NpSqlCommandTests.cs  NpSqlConnectionTests.cs  NpSqlDataReaderTests.cs
client/NpSql.Tests.Integration/: ConnectDisconnectTests.cs  NpSql.Tests.Integration.csproj  ReaderTests.cs
client/NpSql.Tests/Nqp/: GivenYieldSet.cs  IYieldSet.cs  NqpConnection.cs  NqpHeader.cs  NqpParser.cs  NqpType.cs  QuerySetup.cs  RandomYieldSet.cs  Setup.cs  TestNpServer.cs
client/NpSql/Nqp/: ColumnDefinition.cs  CompletedStatus.cs  MessageReader.cs  NqpClient.cs  NqpMessageType.cs  NqpTypes.cs  QueryResultParser.cs  QueryResults.cs
client/npsql/: AssemblyInfo.cs  Class1.cs  NpSqlCommand.cs  npsql.csproj
client/npsql/Nqp/: QueryResults.cs
docs/: nqp.md  outline.md
server/: CMakeLists.txt
server/include/: buffer.h  buffer_manager.h  buffers.h  common.h  create_table.h  data_file.h  data_page.h  defaults.h  executor.h  expr_eval.h  file.h  heap_table.h  insert.h  list.h  lock_table.h  log_file.h  networking.h  npsql.h  nqp.h  parser.h  planner.h  plans.h  query_context.h  scans.h  sql.h  storage.h  syscat.h  threads.h  transaction.h  types.h  value.h  vector.h  wal.h
server/src/: .gitignore  CMakeLists.txt  buffer.c  buffer_manager.c  buffers.c  common.c  create_table.c  data_file.c  data_page.c  expr_eval.c  file.c  heap_table.c  insert.c  lexer.l  lock_table.c  log_file.c  main.c  networking.c  networking_linux.c  npsql.c  nqp.c  parser.h  parser.y  parser_bison.c  planner.c  plans.c  scans.c  sql.c  storage.c  syscat.c  threads.c  threads_linux.c  transaction.c  value.c  wal.c
server/tests/: CMakeLists.txt  buffer_manager_tests.c  buffers_tests.c  create_table_tests.c  data_file_tests.c  heap_tests.c  insert_tests.c  log_file_tests.c  npsql_tests.c  parser_test.c  parser_tests.c  plan_tests.c  transaction_tests.c  vector_tests.c  wal_tests.c
